--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "jscs": "^3.0.7",
+    "lodash": "^4.16.3",
     "react": "15.3.2",
     "react-native": "0.34.1"
   }
